# serializer version: 1
# name: test_r4_asmaddr2_bf16_srvw_golden
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_BBS_BH_Bias_UserArgs_MT128x128x165CRt-9zUBSELs-sHjTp0amiBvohLyneY_ww8A0v8gqw=',
      'err': 0,
    }),
  ])
# ---
# name: test_r4_asmaddr2_fp32_golden
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT64x256x16_MI16x16xofSXj0wfutggh4GOSsj3oGoSaH5qPMLoZbzMCX_9WL8=',
      'err': 0,
    }),
  ])
# ---
